--- a/style/_formFilter.sass
+++ b/style/_formFilter.sass
@@ -3,8 +3,6 @@
 .formFilter__wraper > form
   display: flex
   gap: 20px
-
-
 .formFilter__name
   font-family: 'Inter'
   font-style: normal
@@ -17,14 +15,35 @@
   display: flex
   flex-direction: column
 .formFilter__field
+  padding-left: 18px
   background: #FFFFFF
   border: 1px solid #CED4DA
   border-radius: 4px
   width: 452px
   height: 38px
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 16px
+  line-height: 21px
+  color: #ABB5BE
+
 .formFilter__book
   width: 216px
   height: 38px
   background: #FFFFFF
   border: 1px solid #CED4DA
   border-radius: 4px
+  padding-left: 15px
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 16px
+  line-height: 21px
+  color: #ABB5BE
+
+@media (max-width:'768px') 
+.formFilter__book
+  
+    
+  
