--- a/style/_config.sass
+++ b/style/_config.sass
@@ -2,17 +2,12 @@
   box-sizing: border-box
   margin: 0
   padding: 0
- 
-.container  
-  margin: 0 auto
-  max-width: 688px
+.container
+  width: 100%
   background: #f5f5f5
-body
-  background: #f5f5f5
-  margin: 0 auto
 img
-  border-radius: 4px 4px 0px 0px
-  
+  border-radius: 4px 4px 0 0
 
+@media (max-width: 785px) 
 
   
